@@ -1,6 +1,9 @@
 # ChangeLog for sci-chemistry/hkl2map-bin
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  31 Mar 2011; Justin Lecher <jlec@gentoo.org> hkl2map-bin-0.2.ebuild:
+  Removed script USE
 
   25 Apr 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
   hkl2map-bin-0.2.ebuild:
